# doctest-discover

./: .gitignore  .travis.yml  README.md  config.json  doctest-discover.cabal  stack.yaml
.circleci/: config.yml
src/: Config.hs  Main.hs  Runner.hs
test/: Doctest-Main.hs  test-config.json
