name:                doctest-discover
version:             0.2.0.0
synopsis:            Easy way to run doctests via cabal
description:         doctest-discover provides an easy way to run doctests via cabal
license:             PublicDomain
license-file:        LICENSE
homepage:            http://github.com/karun012/doctest-discover
author:              Karun Ramakrishnan
maintainer:          karun012@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  config.json

source-repository head
  type: git
  location: https://github.com/karun012/doctest-discover

library
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, doctest, directory, filepath, aeson, bytestring
  HS-Source-Dirs:      src

executable doctest-discover
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, doctest, directory, filepath, aeson, bytestring
  main-is:             Main.hs 
  other-modules:       Runner, Config
  HS-Source-Dirs:      src

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             Doctest-Main.hs
  build-depends:       base >= 4.7 && < 5, doctest-discover, doctest
  HS-Source-Dirs:      test
